# P4RROT

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  balazs_notes.md  checks.py  commands.py  docker-compose.yaml  generator_tools.py  known_types.py  pyproject.toml  setup.cfg  standard_fields.py  stateful.py  test_commands.py  test_generator_tools.py  test_known_types.py  test_simulation.py  tox.ini
.github/workflows/: tests.yml
docs/source/: api_summary.rst  conf.py  index.rst
examples/hello-world/: README.md  codegen.py  run_tutorial.sh
examples/iperf-test/: README.md  codegen.py
examples/mqtt-sn-emergency-stop/: codegen.py
examples/ntp_guard/: codegen.py
examples/p40f/: codegen.py
examples/port_knocking/: codegen.py
examples/stock-market-data-monitoring/: README.md  build.sh  codegen.py  test.sh
p4_template.p4app/: config.sh  gen_dummy.py  main.p4
src/p4rrot/: checks.py  generator_tools.py  known_types.py  standard_fields.py  tcp_fields.py
templates/p4_psa_ebpf_ip_template/: main.p4
templates/p4_psa_ebpf_mac_forward/: main.p4
templates/p4_psa_ebpf_template/: main.p4
templates/p4_tcp_template.p4app/: README.md  main.p4
templates/p4_template.p4app/: build.sh  config.sh  fsatomic.c  main.p4  p4app.json
templates/p4_tofino_template.p4app/: standard_headers.p4
test_builds/: accept_changes.sh  run_all.sh
tests/: test_commands.py  test_generator_tools.py  test_known_types.py  test_psa_compilation.py  test_simulation.py
tests/tofino/: test_helpers.py  (+2 more)
tofino/: commands.py  stateful.py
tofino_test_builds/: accept_changes.sh
(+262 files in other folders)
