[metadata]
name = p4rrot
version = 0.0.1
author = Csaba Gyorgyi
author_email = gycsaba96@gmail.com
description = Generating P4 Code for the Application Layer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Team-P4RROT/P4RROT
project_urls =
    Bug Tracker = https://github.com/Team-P4RROT/P4RROT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src